<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">EmergenciAPPS</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Buscar</string>
    <string name="action_save_conf">Guardar</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="favoritos">Números Favoritos</string>
    <string name="datos">Datos Personales</string>
    <string name="numeroBombero">N° Bombero</string>
    <string name="numeroPDI">N° PDI</string>
    <string name="numeroCarabinero">N° Carabinero</string>
    <string name="numeroHospital">N° Centro Médico</string>
    <string name="correoFavorito">Correo contacto</string>
    <string name="mensajeAlerta">Mensaje de Alerta</string>
    <string name="nombreUser">Nombre</string>
    <string name="fonoUser">Mi Número</string>
    <string name="guardar">Guardar</string>
    <string name="numeroCabecera">Número</string>
    <string name="descripcionCabecera">Descripción</string>   
    <string name="llamarCabecera">Llamar</string>
    <string name="radioCobertura">Radio de Búsqueda (km)</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo</string>
    <string name="alertas">Alertas</string>
    <string name="email">E-mail</string>
    <string name="sms">SMS</string>
    <string name="gps">GPS</string>
    <string name="detalleContacto">Detalle Contacto</string>
    <string name="misContactos">Mis Contactos</string>
    <string name="seguimiento">Seguimiento</string>
    <string name="enlace"><a href="">Registrate Aquí</a></string>
</resources>
